# parse2excel

./: LICENSE  README.md  pyproject.toml
parse2excel/: __init__.py  parse2excel.py
src/parse2excel/: parse2excel.py
