[project]
name = "parse2excel"
version = "2022.07.25"
description = "Parsing text files with TextFSM and export to SQLite/Excel with configuration file"
readme = "README.md"
license = { file="LICENSE" }
authors = [
  {name="Umur Arslan"},
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.9"
dependencies = [
    "textfsm >= 1.1.0",
    "openpyxl >= 3.0",
    "PyYAML >= 5.4.1"
]

[project.urls]
"Homepage" = "https://github.com/umurarslan/parse2excel"

[project.scripts]
parse2excel = "parse2excel.parse2excel:main"
